# src/dtos/users.dto.ts
@@ -1,4 +1,5 @@
-import { IsEmail, IsString, IsOptional } from 'class-validator';
+import { UserRole, UserStatus } from '@/interfaces/users.interface';
+import { IsEmail, IsString, IsOptional, IsIn } from 'class-validator';
 
 export class LoginUserDto {
   @IsEmail()
@@ -16,5 +17,16 @@ export class SignUpUserDto {
   public password: string;
 
   @IsOptional()
-  public username?: string;
+  public firstName?: string;
+
+  @IsOptional()
+  public lastName?: string;
+
+  @IsOptional()
+  @IsIn([UserRole.SPECIALIST, UserRole.USER, UserRole.ADMIN])
+  public role?: UserRole;
+
+  @IsOptional()
+  @IsIn([UserStatus.ACTIVE, UserStatus.BAN, UserStatus.IN_ACTIVE])
+  public status?: UserStatus;
 }
